--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/faq.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/faq.cshtml
@@ -47,10 +47,13 @@
 
     <div class="row">
         <div class="col-2 text-center novifont">
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                Søg
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/oversigtskort'">
                 Oversigtskort
             </button>
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/ParkeringPage/create'">
                 Parkering
             </button>
             <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
