--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,58 +5,41 @@
     ViewData["Title"] = "Log in";
 }
 
-<style>
-    body {
-        background-color: #E6E9ED;
-    }
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <title>Startside</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-    .orangeline {
-        border-top: 5px solid #F3BB1B;
-        margin: 1% 0% 0% 0%;
-    }
-
-    .Loginkasse {
-        margin-left: 23%
-    }
-
-        .Container input {
-            background-color: #8D9092;
-            border-color: #8D9092;
-            color: white;
-        }
-
-    .Loginknap {
-        background-color: #f3bb1b;
-        border-color: #f3bb1b;
-        border-radius: 5PX;
-    }
-</style>
-
-<div class="row">
-    <div class="col-mb-4 offset-3">
-        <br><br>
-        <section class="Loginkasse">
-            <h1>@ViewData["Title"]</h1>
-            <form id="account" method="post">
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div><br>
-                <div class="form-group">
-                    <button type="submit" class="Loginknap btn-block">Log in</button>
-                </div>
-            </form>
-        </section>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 text-center">
+            <br><br>
+            <section>
+                <h1>@ViewData["Title"]</h1>
+                <form id="account" method="post">
+                    <hr />
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div><br>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block btn-lg novifont noviyellow button text-center">Log in</button>
+                    </div>
+                </form>
+            </section>
+        </div>
     </div>
-
 </div>
 
 @section Scripts {
