--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
@@ -17,38 +17,13 @@
 </head>
 
 <body>
-    <ul class="navbar-nav">
-        @if (SignInManager.IsSignedIn(User))
-        {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-            </li>
-            <li class="nav-item">
-                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                    <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-                </form>
-            </li>
 
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/AdminNavi">Rediger i Databasen</a>
-            </li>
-        }
-        else
-        {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Opret ny adminkonto</a>
-            </li>
-        }
-    </ul>
-
+<!--
 <textarea id="myText">
     Din aftale er ankommet
 </textarea>
     <button onclick="sendMail(); return false">Send</button>
-
+-->
 
     <div class="container-fluid">
         <div class="row">
@@ -68,15 +43,40 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </div><br>
 
         <div class="row">
             <div class="col-12 mt-5 text-center">
                 <button type="button" class="btn btn-primary btn-lg novifont noviyellow button text-center"
-                        onclick="window.location.href = '/oversigt'">
+                        onclick="window.location.href = '/VirksomhederPage'">
                     Tryk her
                 </button>
             </div>
+        </div>
+        <div class="row">
+            <ul class="navbar-nav">
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+                    </li>
+                    <li class="nav-item">
+                        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                            <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                        </form>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/AdminNavi">Rediger i Databasen</a>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark mt-5" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                    </li>
+                }
+            </ul>
         </div>
     </div>
 </body>
