--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Index.cshtml
@@ -2,15 +2,34 @@
 @model LoginOgInfo.Pages.LokalerPage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Søg på lokaler!";
 }
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
-<h1>Index</h1>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="\css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <title>@ViewData["title"]</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+@if (SignInManager.IsSignedIn(User))
+{
+
+
+
+
 
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-
 <form>
     <p>
         Søg efter nummeret på et lokale:
@@ -19,25 +38,26 @@
         <input type="submit" value="Filter" />
     </p>
 </form>
-
 <table class="table">
     <thead>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.LokalerInfo[0].Lokalenummer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LokalerInfo[0].Lejer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LokalerInfo[0].Medarbejderantal)
-        </th>
-        <th></th>
-    </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.LokalerInfo[0].Lokalenummer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LokalerInfo[0].Lejer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LokalerInfo[0].Medarbejderantal)
+            </th>
+            <th></th>
+        </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model.LokalerInfo)
-    {
+        @foreach (var item in Model.LokalerInfo)
+        {
+
+
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Lokalenummer)
@@ -54,6 +74,102 @@
                 <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
-    }
+        }
     </tbody>
 </table>
+}
+
+
+else
+
+{
+<body>
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col">
+                <p class="headline novifont text-center">
+                    @ViewData["Title"]
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-3">
+                <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+            </div>
+
+            <div class="col-9">
+                <form class="searchbar1">
+                    <input type="text" placeholder="Søg efter lokalenummer" class="searchbar novidgrey novifont" asp-for="SearchString" />
+                    <!--<input type="submit" value="Filter" /> -->
+                    <button type="submit" class="searchbtn novidgrey float-right mt-1"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <hr class="mb-4 orangeline noviyellow" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2 text-center novifont">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                Søg
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+                Oversigtskort
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkeringPage/create'">
+                Parkering
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                Faq
+            </button>
+        </div>
+
+        <div class="col-10">
+            <div class="row text-center novifont">
+                @foreach (var item in Model.LokalerInfo.Take(3))
+                {
+                <div class="col-4">
+                    <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Lokalenummer)</a>
+                </div>
+                }
+            </div>
+            <div class="row">
+                @foreach (var item in Model.LokalerInfo.Skip(3).Take(3))
+                {
+                <div class="col-4">
+                    <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Lokalenummer)</a>
+                </div>
+                }
+            </div>
+            <div class="row">
+                @foreach (var item in Model.LokalerInfo.Skip(6).Take(3))
+                {
+                <div class="col-4">
+                    <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Lokalenummer)</a>
+                </div>
+                }
+            </div>
+            <div class="row">
+                @foreach (var item in Model.LokalerInfo.Skip(9).Take(3))
+                {
+                <div class="col-4">
+                    <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Lokalenummer)</a>
+                </div>
+                }
+            </div>
+        </div>
+    </div>
+
+</body>
+
+}
+
