--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
@@ -4,46 +4,134 @@
 @{
     ViewData["Title"] = "Details";
 }
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="\css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
+    <title>@ViewData["title"]</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
 
 <h1>Details</h1>
+@if (SignInManager.IsSignedIn(User))
+{
+    <div>
+        <h4>MedarbejderInfo</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.MedarbejderInfo.Navn)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.MedarbejderInfo.Navn)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.MedarbejderInfo.Virksomhed)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.MedarbejderInfo.Virksomhed)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.MedarbejderInfo.Lokale)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.MedarbejderInfo.Lokale)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.MedarbejderInfo.Email)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.MedarbejderInfo.Email)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.MedarbejderInfo.Stilling)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.MedarbejderInfo.Stilling)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-page="./Edit" asp-route-id="@Model.MedarbejderInfo.ID">Edit</a> |
+        <a asp-page="./Index">Back to List</a>
+    </div>
+}
+else
+{
 
-<div>
-    <h4>MedarbejderInfo</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MedarbejderInfo.Navn)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedarbejderInfo.Navn)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MedarbejderInfo.Virksomhed)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedarbejderInfo.Virksomhed)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MedarbejderInfo.Lokale)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedarbejderInfo.Lokale)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MedarbejderInfo.Email)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedarbejderInfo.Email)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MedarbejderInfo.Stilling)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedarbejderInfo.Stilling)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.MedarbejderInfo.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+    <body>
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col">
+                    <p class="headline novifont text-center">
+                        @ViewData["Title"]
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3">
+                    <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                    <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                    <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+                </div>
+                <div class="col-9">
+                    <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <hr class="mb-4 orangeline noviyellow" />
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2 text-center novifont">
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/oversigtskort'">
+                    Oversigtskort
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+                    Parkering
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                    Faq
+                </button>
+            </div>
+
+            <div class="col-10">
+                <div class="row">
+                    <div class="col-6">
+                        <p class="normaltext novifont">
+                            Navn: @Html.DisplayFor(model => model.MedarbejderInfo.Navn)<br />
+                            Lokale: @Html.DisplayFor(model => model.MedarbejderInfo.Lokale)<br />
+                            Email: @Html.DisplayFor(model => model.MedarbejderInfo.Email)
+                        </p>
+                    </div>
+                    <div class="col-6">
+                        <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 findsomethingbox mt-4 mb-5">
+                        <p class="findsomethingboxheader novifont">
+                            Sådan finder du @Html.DisplayFor(model => model.MedarbejderInfo.Navn)
+                        </p><p class="normaltext novifont">
+                            
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+}
