--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Oversigtskort.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Oversigtskort.cshtml
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="\css/core.css" />
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-
-    <title>@ViewData["title"]</title>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,9 +31,6 @@
                 <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
             </div>
-            <div class="col-9">
-                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
-            </div>
         </div>
     </div>
 
@@ -48,10 +42,13 @@
 
     <div class="row">
         <div class="col-2 text-center novifont">
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                Søg
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/oversigtskort'">
                 Oversigtskort
             </button>
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/ParkeringPage/create'">
                 Parkering
             </button>
             <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
@@ -61,9 +58,8 @@
 
         <div class="col-10">
             <div class="row">
-                <div class="col-12">
-                    <!-- indsæt oversigts billede herunder-->
-                    <img />
+                <div class="col-12 text-center">
+                    <img src="Pictures/kort.png" class="oversigt" />
                 </div>
             </div>
         </div>
