--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
@@ -2,32 +2,86 @@
 @model LoginOgInfo.Pages.ParkeringPage.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Registrer parkering";
 }
-
-<h1>Register nummerplade</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ParkeringsInfo.Nummerplade" class="control-label"></label>
-                <input asp-for="ParkeringsInfo.Nummerplade" class="form-control" />
-                <span asp-validation-for="ParkeringsInfo.Nummerplade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="\css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col">
+                <p class="headline novifont text-center">
+                    @ViewData["Title"]
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-3">
+                <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-12">
+                <hr class="mb-4 orangeline noviyellow" />
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2 text-center novifont">
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                    Søg
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/Oversigtskort'">
+                    Oversigtskort
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkeringPage/create'">
+                    Parkering
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                    Faq
+                </button>
+            </div>
+            <div class="row">
+                <div class="col-10">
+                    <div class="row">
+                        <div class="col-12 offset-9 text-center">
+                            <form method="post">
+                                <div asp-validation-summary="ModelOnly" class="text-center"></div>
+                                <div class="form-group text-center">
+                                    <p class="mb-4 novifont">
+                                        For at begynde din parkering, så skal du indtaste din nummerplade:
+                                    </p>
+                                    <input asp-for="ParkeringsInfo.Nummerplade" class="text-center searchbar1" placeholder="AB12345">
+                                    <span asp-validation-for="ParkeringsInfo.Nummerplade" class="text-center"></span>
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" value="Registrer" class="btn btn-primary novifont shadow btn-lg button noviyellow mt-4" />
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+
