--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Details.cshtml
@@ -2,55 +2,142 @@
 @model LoginOgInfo.Pages.VirksomhederPage.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Firma Information";
 }
 
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<h1>Details</h1>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="\css/core.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
-<div>
-    <h4>VirksomhederInfo</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VirksomhederInfo.Navn)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VirksomhederInfo.CVR)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VirksomhederInfo.Medarbejdere)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VirksomhederInfo.Medarbejdere)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VirksomhederInfo.Lokale)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VirksomhederInfo.Findvej)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VirksomhederInfo.Findvej)
-        </dd>
-    </dl>
-</div>
+    <title>@ViewData["title"]</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
 @if (SignInManager.IsSignedIn(User))
 {
+    <body>
+    <div>
+        <h4>VirksomhederInfo</h4>
+        <hr/>
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.VirksomhederInfo.Navn)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.VirksomhederInfo.CVR)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.VirksomhederInfo.Medarbejdere)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.VirksomhederInfo.Medarbejdere)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.VirksomhederInfo.Lokale)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.VirksomhederInfo.Findvej)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.VirksomhederInfo.Findvej)
+            </dd>
+        </dl>
+    </div>
+
     <div>
         <a asp-page="./Edit" asp-route-id="@Model.VirksomhederInfo.ID">Edit</a> |
         <a asp-page="./Index">Back to List</a>
     </div>
+    </body>
+}
+
+else
+{
+
+    <body>
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col">
+                <p class="headline novifont text-center">
+                    @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-3">
+                <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1"/>
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid"/>
+            </div>
+            <div class="col-9">
+                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <hr class="mb-4 orangeline noviyellow"/>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2 text-center novifont">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+                Oversigtskort
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+                Parkering
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                Faq
+            </button>
+        </div>
+
+        <div class="col-10">
+            <div class="row">
+                <div class="col-6">
+                    <p class="normaltext novifont">
+                        Firma: @Html.DisplayFor(model => model.VirksomhederInfo.Navn)<br/>
+                        Lokale: @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)<br/>
+                        CVR: @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
+                    </p>
+                </div>
+                <div class="col-6">
+                    <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2"/>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 findsomethingbox mt-4 mb-5">
+                    <p class="findsomethingboxheader novifont">
+                        Sådan finder du @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
+                    </p>
+                    <p class="normaltext novifont">
+                        @Html.DisplayFor(model => model.VirksomhederInfo.Findvej)
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    </body>
 }
