--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
@@ -2,24 +2,36 @@
 @model LoginOgInfo.Pages.VirksomhederPage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Hvad skal du bruge hjælp til?";
 }
 
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<h1>Index</h1>
-<form>
-    <p>
-        Søg efter navnet på en virksomhed:
-        <br />
-        <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
-    </p>
-</form>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="\css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <title>@ViewData["title"]</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+
 @if (SignInManager.IsSignedIn(User))
 {
+    <form>
+        <p>
+            Søg efter navnet på en virksomhed:
+            <br />
+            <input type="text" asp-for="SearchString" />
+            <input type="submit" value="Filter" />
+        </p>
+    </form>
     <p>
         <a asp-page="Create">Create New</a>
     </p>
@@ -81,44 +93,102 @@
 }
 
 else
+
 {
+    <body>
+        <div class="container-fluid">
 
-<div class="container">
-    <div class="row">
-        @foreach (var item in Model.VirksomhederInfo.Take(3))
-        {
-            <div class="col">
-                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+            <div class="row">
+                <div class="col">
+                    <p class="headline novifont text-center">
+                        @ViewData["Title"]
+                    </p>
+                </div>
             </div>
-        }
-    </div>
 
-    <div class="row">
-        @foreach (var item in Model.VirksomhederInfo.Skip(3).Take(3))
-        {
-            <div class="col">
-                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+            <div class="row">
+                <div class="col-3">
+                    <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                    <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                    <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+                </div>
+
+                <div class="col-9">
+                    <div class="row">
+                        <div class="col-12">
+                            <form class="searchbar1">
+                                <input type="text" placeholder="Søg efter navnet på virksomheden" class="searchbar novidgrey novifont" asp-for="SearchString" />
+                                <!--<input type="submit" value="Filter" /> -->
+                                <button type="submit" class="searchbtn novidgrey float-right"><i class="fa fa-search"></i></button>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-        }
-    </div>
+        </div>
 
-    <div class="row">
-        @foreach (var item in Model.VirksomhederInfo.Skip(6).Take(3))
-        {
-            <div class="col">
-                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+        <div class="row">
+            <div class="col-12">
+                <hr class="mb-4 orangeline noviyellow" />
             </div>
-        }
-    </div>
+        </div>
 
-    <div class="row">
-        @foreach (var item in Model.VirksomhederInfo.Skip(9).Take(3))
-        {
-            <div class="col">
-                <a asp-page="./Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+        <div class="row">
+            <div class="col-2 text-center novifont">
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/search'">
+                    Søg
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/oversigtskort'">
+                    Oversigtskort
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkeringPage/create'">
+                    Parkering
+                </button>
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                    Faq
+                </button>
             </div>
-        }
-    </div>
 
-</div>
+            <div class="col-10 novifont">
+                <div class="row text-center">
+                    @foreach (var item in Model.VirksomhederInfo.Take(3))
+                    {
+                        <div class="col-4">
+                            <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+                        </div>
+                    }
+                </div>
+                <div class="row">
+                    @foreach (var item in Model.VirksomhederInfo.Skip(3).Take(3))
+                    {
+                        <div class="col-4">
+                            <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+                        </div>
+                    }
+                </div>
+                <div class="row">
+                    @foreach (var item in Model.VirksomhederInfo.Skip(6).Take(3))
+                    {
+                        <div class="col-4">
+                            <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+                        </div>
+                    }
+                </div>
+                <div class="row">
+                    @foreach (var item in Model.VirksomhederInfo.Skip(9).Take(3))
+                    {
+                        <div class="col-4">
+                            <a asp-page="./Details" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Navn)</a>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+
+    </body>
+
 }
+
+
+
