--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Log ind";
 }
 
 <head>
@@ -19,7 +19,7 @@
         <div class="col-12 text-center">
             <br><br>
             <section>
-                <h1>@ViewData["Title"]</h1>
+                <p class="headline">Log In</p>
                 <form id="account" method="post">
                     <hr />
                     <div asp-validation-summary="All" class="text-danger"></div>
