--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Search.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Search.cshtml
@@ -2,6 +2,9 @@
 @model LoginOgInfo.Pages.SearchModel
 @{
 }
+@{
+    ViewData["Title"] = "Hvad skal du bruge hjælp til?";
+}
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -58,75 +61,23 @@
         <div class="col-10">
             <div class="row">
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
-                        Oversigtskort
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg text-center" onclick="window.location.href = '/VirksomhederPage'">
+                        Søg Virksomheder
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
-                        Parkering
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg text-center" onclick="window.location.href = '/Medarbejderpage'">
+                        Søg Medrbejder
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
-                        Faq
-                    </button>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
-                        Oversigtskort
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
-                        Parkering
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
-                        Faq
-                    </button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
-                        Oversigtskort
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
-                        Parkering
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
-                        Faq
-                    </button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/index'">
-                        Oversigtskort
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/parkering'">
-                        Parkering
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg" onclick="window.location.href = '/faq'">
-                        Faq
+                    <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg text-center" onclick="window.location.href = '/Lokalerpage'">
+                        Søg Lokaler
                     </button>
                 </div>
             </div>
         </div>
-    </div>
+            </div>
 
 </body>
 
