--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/wwwroot/css/core.css
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/wwwroot/css/core.css
@@ -11,11 +11,6 @@
     padding: 2.5rem 5rem;
 }
 
-/* btn-primary:hover {
-    background-color: rgb(243, 180, 27);
-    color: white;
-} */
-
 body {
     background-color: rgb(230, 233, 237);
 }
@@ -184,7 +179,7 @@ body {
 
 .searchbar {
     font-size: 150%;
-    width: 55%;
+    width: 95vh;
     outline: none;
     border-color: rgb(102, 109, 119);
     border-style: solid;
