--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Search.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Search.cshtml
@@ -47,10 +47,13 @@
 
     <div class="row">
         <div class="col-2 text-center novifont">
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/search'">
+                Søg
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/oversigtskort'">
                 Oversigtskort
             </button>
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkeringPage/create'">
                 Parkering
             </button>
             <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
@@ -62,17 +65,17 @@
             <div class="row">
                 <div class="col-4">
                     <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg text-center" onclick="window.location.href = '/VirksomhederPage'">
-                        Søg Virksomheder
+                        Søg  efter virksomheder
                     </button>
                 </div>
                 <div class="col-4">
                     <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg text-center" onclick="window.location.href = '/Medarbejderpage'">
-                        Søg Medrbejder
+                        Søg efter medarbejdere
                     </button>
                 </div>
                 <div class="col-4">
                     <button type="button" class="btn btn-primary btn-lg novidgrey mb-4 btn-block button shadow button-lg text-center" onclick="window.location.href = '/Lokalerpage'">
-                        Søg Lokaler
+                        Søg efter lokaler
                     </button>
                 </div>
             </div>
