--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/faq.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/faq.cshtml
@@ -33,9 +33,6 @@
                 <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
             </div>
-            <div class="col-9">
-                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
-            </div>
         </div>
     </div>
 
@@ -47,7 +44,7 @@
 
     <div class="row">
         <div class="col-2 text-center novifont">
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/search'">
                 Søg
             </button>
             <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/oversigtskort'">
@@ -65,17 +62,19 @@
             <div class="row">
                 <div class="col-12 findsomethingbox">
                     <p class="headline text-center">
-                        Ofte Stillede Spørgsmål <br /><br />
+                        Ofte Stillede Spørgsmål <br />
                     </p>
                     <p class="normaltext novifont">
                         Hvor ligger Kantinen?<br />
                         -Lige ud af gangen. Sidste dør til højre<br /><br />
-                        Hvor ligger Kantinen?<br />
-                        -Lige ud af gangen. Sidste dør til højre<br /><br />
-                        Hvor ligger Kantinen?<br />
-                        -Lige ud af gangen. Sidste dør til højre<br /><br />
-                        Hvor ligger Kantinen?<br />
-                        -Lige ud af gangen. Sidste dør til højre<br /><br />
+                        Hvad er nummeret til Falck? vagtcentral?<br />
+                        -Nummeret er: 7010 2030<br /><br />
+                        Hvad er nummeret til en taxa?<br />
+                        -Du kan få fat i en taxa med nummeret: 9810 1010<br /><br />
+                        Hvor er nærmeste toilet?<br />
+                        -Lige ud af gangen og første dør på venstre hånd<br /><br/>
+                        Hvordan fungerer parkering hos Novi?<br />
+                        - Du kan via. receptionisten indtaste din nummerplade for at begynde din parkeringslicens hos Novi.
                     </p>
                 </div>
             </div>
