--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/AdminNavi.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/AdminNavi.cshtml
@@ -16,57 +16,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-
 <body>
     <div class="row">
         <div class="col-12">
-            <ul class="navbar-nav text-center">
-                @if (SignInManager.IsSignedIn(User))
-                {
-                    <p class="novifont headline">Velkommen @User.Identity.Name. Du er nu logget ind, hvad vil du foretage dig?</p>
-                    <br>
-                    <li class="nav-item">
-                        <a class="btn btn-primary btn-lg novifont noviyellow button shadow btn-block" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Redigér din bruger</a>
-                    </li>
-                    <br>
-                    <li class="nav-item">
-                        <form class="btn btn-primary btn-lg novifont noviyellow button shadow btn-block text-center" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new {area = ""})" method="post">
-                            <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-                        </form><br><br />
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Ny adminkonto</a>
-                    </li>
-                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow"
-                            onclick="window.location.href = '/VirksomhederPage/Index'">
-                        Administer virksomheder
-                    </button>
-                    <br>
-                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow"
-                            onclick="window.location.href = '/MedarbejderPage/Index'">
-                        Administer medarbejdere
-                    </button>
-                    <br>
-                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow"
-                            onclick="window.location.href = '/LokalerPage/Index'">
-                        Administer lokaler
-                    </button>
 
-                }
-                else
-                {
-                    <p class="novifont headline">Du skal være logget ind for at redigere i databasen.</p>
-                    <br>
-                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/Identity/Account/login'">
-                        Klik her for at logge ind
-                    </button>
-                    <br>
-                    <br>
-                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
-                        Klik her for at returnere til forsiden
-                    </button>
-                }
-            </ul>
+            @if (SignInManager.IsSignedIn(User))
+            {
+            <p class="novifont headline text-center">
+                Velkommen @User.Identity.Name. Du er nu logget ind, hvad vil du foretage dig?
+            </p>
+
+            <button type="button" class="btn btn-primary btn-lg btn-block novifont noviyellow button shadow" onclick="window.location.href = '/Identity/Account/Manage/Index'">
+                Redigér kontooplysninger
+            </button>
+
+            <button type="button" class="btn btn-primary btn-lg btn-block novifont noviyellow button shadow"
+                    onclick="window.location.href = '/Identity/Account/Register'">
+                Register ny admin
+            </button>
+
+            <button type="button" class="btn btn-primary btn-lg btn-block novifont noviyellow button shadow"
+                    onclick="window.location.href = '/VirksomhederPage/Index'">
+                Administer virksomheder
+            </button>
+
+            <button type="button" class="btn btn-primary btn-lg btn-block novifont noviyellow button shadow"
+                    onclick="window.location.href = '/MedarbejderPage/Index'">
+                Administer medarbejdere
+            </button>
+
+            <button type="button" class="btn btn-primary btn-lg btn-block novifont noviyellow button shadow"
+                    onclick="window.location.href = '/LokalerPage/Index'">
+                Administer lokaler
+            </button>
+
+            <form class="text-center mt-2" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new {area = ""})" method="post">
+                <button type="submit" class="btn btn-primary btn-lg novifont noviyellow button shadow btn-block">
+                    Logout
+                </button>
+            </form>
+
+            }
+            else
+            {
+            <p class="novifont headline mt-3 mb-3">
+                Du skal være logget ind for at redigere i databasen.
+            </p>
+            <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/Identity/Account/login'">
+                Klik her for at logge ind
+            </button>
+            <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
+                Klik her for at returnere til forsiden
+            </button>
+
+            }
         </div>
     </div>
 </body>
