--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,33 +15,51 @@
 </head>
 
 <div class="container-fluid">
+
     <div class="row">
         <div class="col-12 text-center">
-            <br><br>
-            <section>
-                <p class="headline">Log In</p>
-                <form id="account" method="post">
-                    <hr />
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control" />
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" class="form-control" />
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div><br>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block btn-lg novifont noviyellow button text-center">Log in</button>
-                    </div>
-                </form>
-            </section>
+            <p class="headline">Log In</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-3">
+            <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+            <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1" />
+            <img src="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid" />
         </div>
     </div>
 </div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+<div class="row">
+    <div class="col-12">
+        <hr class="mb-4 orangeline noviyellow" />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-12 text-center">
+        <section>
+            <form id="account" method="post">
+                <hr />
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="form-control" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.Password"></label>
+                    <input asp-for="Input.Password" class="form-control" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div><br>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block btn-lg novifont noviyellow button text-center shadow">Log in</button>
+                </div>
+            </form>
+        </section>
+    </div>
+</div>
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
