--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -2,13 +2,21 @@
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
-<ul class="nav nav-pills flex-column">
-    <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
-    @if (hasExternalLogins)
-    {
-        <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
-    }
-    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
-</ul>
+
+<div class="container">
+    <div class="row">
+        <div class="nav-item btn btn-primary btn-block btn-lg novifont noviyellow button text-center mb-3">
+            <a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext) novifont noviyellow" id="personal-data" asp-page="./Index">Personlig data</a>
+        </div>
+        <div class="nav-item btn btn-primary btn-block btn-lg novifont noviyellow button text-center mb-3">
+            <a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)  novifont noviyellow text-center mb-3" id="change-password" asp-page="./ChangePassword">Kodeord</a>
+        </div>
+    </div>
+</div>
+
+
+
+<button type="button" class="btn btn-primary btn-lg btn-block novifont noviyellow button shadow"
+                onclick="window.location.href = '/Identity/Account/AdminNavi'">
+            Administer virksomheder
+        </button>
