--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
@@ -46,7 +46,7 @@
 
         <div class="row">
             <div class="col-2 text-center novifont">
-                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+                <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/search'">
                     Søg
                 </button>
                 <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/Oversigtskort'">
@@ -62,14 +62,14 @@
             <div class="row">
                 <div class="col-10">
                     <div class="row">
-                        <div class="col-12 offset-9 text-center">
+                        <div class="col-12 offset-5 text-center">
                             <form method="post">
                                 <div asp-validation-summary="ModelOnly" class="text-center"></div>
                                 <div class="form-group text-center">
-                                    <p class="mb-4 novifont">
+                                    <p class="mb-3 novifont parkingfont">
                                         For at begynde din parkering, så skal du indtaste din nummerplade:
                                     </p>
-                                    <input asp-for="ParkeringsInfo.Nummerplade" class="text-center searchbar1" placeholder="AB12345">
+                                    <input asp-for="ParkeringsInfo.Nummerplade" class="text-center parkinginput" placeholder="AB12345">
                                     <span asp-validation-for="ParkeringsInfo.Nummerplade" class="text-center"></span>
                                 </div>
                                 <div class="form-group">
