--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
@@ -97,7 +97,6 @@ else
 {
     <body>
         <div class="container-fluid">
-
             <div class="row">
                 <div class="col">
                     <p class="headline novifont text-center">
@@ -116,14 +115,13 @@ else
                 <div class="col-9">
                     <div class="row">
                         <div class="col-12">
-                            <form class="searchbar1">
-                                <input type="text" placeholder="Søg efter navnet på virksomheden" class="searchbar novidgrey novifont" asp-for="SearchString" />
+                            <form class="searchbox text-center">
+                                <input type="text" placeholder="Søg efter navnet på virksomheden" class=" searchbar novidgrey novifont" asp-for="SearchString" />
                                 <!--<input type="submit" value="Filter" /> -->
-                                <button type="submit" class="searchbtn novidgrey float-right"><i class="fa fa-search"></i></button>
+                                <button type="submit" class="searchbtn novidgrey"><i class="fa fa-search"></i></button>
                             </form>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -185,9 +183,7 @@ else
                 </div>
             </div>
         </div>
-
     </body>
-
 }
 
 
